# protobuf-demo

./: .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  README.md  company.pb.cc  company.pb.h  company.proto
.github/workflows/: ci.yml
include/: company_repository.h
src/: company_repository.cpp  main.cpp
tests/: test_company.cpp
